Crash fix of 'crash on import classes(c++)'

BUG:175096